--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Sen:wght@400..800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Sen", sans-serif;
+}
