style: designed navbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,11 @@
 body {
   font-family: "Sen", sans-serif;
 }
+
+nav ul li:hover {
+  @apply text-yellow-700 transition-all;
+}
+
+nav ul a.active {
+  @apply text-yellow-600 font-semibold;
+}
