feat: implemented count new reservation requests api

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,15 @@ nav ul a.active {
 .wrapper {
   @apply mt-[6rem];
 }
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
